@@ -29,6 +29,24 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
             <artifactId>javafx-fxml</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+    <groupId>com.jfoenix</groupId>
+    <artifactId>jfoenix</artifactId>
+    <version>9.0.10</version>
+</dependency>
+<dependency>
+    <groupId>io.github.palexdev</groupId>
+    <artifactId>materialfx-all</artifactId>
+    <version>11.25.0</version>
+</dependency>
+
+
+<dependency>
+    <groupId>org.controlsfx</groupId>
+    <artifactId>controlsfx</artifactId>
+    <version>11.1.1</version>
+</dependency>
+
          <!-- MySQL modules -->
      <dependency>
     <groupId>com.sun.mail</groupId>
@@ -50,6 +68,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 
 
     </dependencies>
+    <repositories>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
+</repositories>
+
 	
   <build>
     <plugins>
@@ -57,9 +82,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.8</version>
-            <configuration>
-                <mainClass>JStream.application</mainClass> 
-            </configuration>
+             <configuration>
+        <mainClass>JStream.application</mainClass>
+        <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang.reflect=ALL-UNNAMED</option>
+        </options>
+    </configuration>
         </plugin>
     </plugins>
 </build>
